# AnthropicAcademy

./: .env.example  .gitignore  README.md  pyproject.toml
MCP/: main.py  mcp_client.py  mcp_server.py
MCP/core/: chat.py  cli.py  cli_chat.py  gemini.py  tools.py
