[project]
name = "anthropicacademy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.93.0",
    "google-genai>=1.72.0",
    "mcp[cli]>=1.27.0",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["MCP"]
